added an episode page and also fixed some bugs

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,7 @@
 .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     padding-top: var(--spacing-medium);
 }
 
